--- a/general.css
+++ b/general.css
@@ -1,13 +1,11 @@
 body {
     background-color: #323232;
+    color: white;
+    font-size: 24px;
+    text-align: center;
   }
-p {
-color: white;
-text-align: center;
-font-size: 24px;
-}
     
 h1 {
-color: white;
+color: rgb(55, 98, 238);
 text-align: center;
 }
