--- a/general.css
+++ b/general.css
@@ -1,11 +1,15 @@
 body {
     background-color: #323232;
-    color: white;
-    font-size: 24px;
-    text-align: center;
+
   }
     
 h1 {
-color: rgb(55, 98, 238);
-text-align: center;
+  color: rgb(55, 98, 238);
+  text-align: center;
+}
+p{
+  color: white;
+  font-size: 24px;
+  text-align: center;
+
 }
