update config and test fonts

--- a/general.css
+++ b/general.css
@@ -4,6 +4,7 @@ body {
   }
     
 h1 {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
   color: rgb(55, 98, 238);
   text-align: center;
 }
