--- a/general.css
+++ b/general.css
@@ -1,16 +1,35 @@
 body {
-    background-color: #323232;
+    background-color: #1b1b1b;
 
   }
     
 h1 {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
-  color: rgb(55, 98, 238);
+  color: rgb(83, 119, 238);
   text-align: center;
+  font-size: 40px;
 }
 p{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
   color: white;
   font-size: 24px;
   text-align: center;
 
+}
+.button{
+  background-color: #4CAF50;
+  color: white;
+  font-size: 24px;
+  padding: 12px 28px;
+  border-radius: 8px;
+  transition-duration: 0.4s;
+  width: 250px;
+  text-align: center;
+  display: inline-block;
+
+}
+.button:hover{
+  background-color: white;
+  border-color: #4CAF50;
+  color: black;
 }
