--- a/general.css
+++ b/general.css
@@ -7,7 +7,7 @@ h1 {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
   color: rgb(83, 119, 238);
   text-align: center;
-  font-size: 60px;
+  font-size:xx-large;
 }
 p{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
@@ -16,7 +16,7 @@ p{
   text-align: center;
 
 }
-a.button{
+a.button1{
   background-color: #4CAF50;
   color: white;
   font-size: 24px;
@@ -28,7 +28,7 @@ a.button{
   display: inline-block;
 
 }
-a.button:hover{
+a.button1:hover{
   background-color: white;
   border-color: #4CAF50;
   color: black;
