--- a/general.css
+++ b/general.css
@@ -13,6 +13,7 @@ p{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
   color: white;
   font-size: 20px;
+  margin: 0 auto;
   text-align: center;
 
 }
