--- a/general.css
+++ b/general.css
@@ -1,34 +1,48 @@
 body {
-    background-color: #1b1b1b;
+  background-color: #1b1b1b;
+}
 
-  }
-    
 h1 {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: rgb(83, 119, 238);
   text-align: center;
-  font-size: 60px;;
+  font-size: 60px;
 }
-p{
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+p {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: white;
   font-size: 20px;
   text-align: center;
-
 }
-.button1{
-  background-color: #4CAF50;
+
+.form-default {
+  margin-left: auto;
+  margin-right: auto;
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.form-default input {
+  padding: 1em 1.4em;
+}
+
+.button1 {
+  margin-top: 15px;
+  background-color: #4caf50;
   color: white;
   font-size: 24px;
   padding: 12px 28px;
   border-radius: 8px;
   transition-duration: 0.4s;
-  width: 250px;
   text-align: center;
-  display:inline-block;
- 
+  cursor: pointer;
 }
-
+.button1:hover {
+  transition: background-color 0.35s ease-in-out;
+  background-color: #306f32;
+}
 
 /*.button1:hover{
   background-color: white;
