--- a/general.css
+++ b/general.css
@@ -1,10 +1,10 @@
 body {
-  background-color: #ffffff;
+  background-color: #d7dadb;
 }
 
 h1 {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: rgb(83, 119, 238);
+  color: #085a75;
   text-align: center;
   font-size: 60px;
 }
