--- a/general.css
+++ b/general.css
@@ -3,20 +3,20 @@ body {
 }
 
 h1 {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: "Lato", sans-serif;
   color: #085a75;
   text-align: center;
   font-size: 60px;
 }
 p {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: "Lato", sans-serif;
   color: #338591;
   font-size: 20px;
   text-align: center;
 }
 
 pinst {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: "Lato", sans-serif;
   color: #085a75;
   font-size: 20px;
   text-align: center;
