--- a/general.css
+++ b/general.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif; 
   color: #085a75;
   text-align: center;
   font-size: 60px;
