--- a/general.css
+++ b/general.css
@@ -12,7 +12,7 @@ p {
   font-family: "Lato", sans-serif;
   color: #338591;
   font-size: 20px;
-  text-align: center;
+  text-align: justify;
 }
 
 pinst {
