--- a/general.css
+++ b/general.css
@@ -19,7 +19,7 @@ pinst {
   font-family: "Lato", sans-serif;
   color: #085a75;
   font-size: 20px;
-  text-align: center;
+  text-align: justify;
 }
 
 .form-default {
