--- a/general.css
+++ b/general.css
@@ -59,7 +59,7 @@ pinst {
 .button2 {
   margin-top: 15px;
   background-color: #085a75;
-  color: black;
+  color: white;
   font-size: 24px;
   padding: 12px 28px;
   border-radius: 8px;
